DDD and couple of packages

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "require": {
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
+        "juststeveking/laravel-postcodes": "^2.0",
+        "juststeveking/laravel-transporter": "^1.0",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7"
@@ -23,7 +25,8 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Domains\\": "src/Domains/"
         }
     },
     "autoload-dev": {
