--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "spatie/laravel-event-sourcing": "^7.2",
         "spatie/laravel-query-builder": "^5.0"
     },
     "require-dev": {
